objects/HandsMen_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name_c__c</fullName>
        <formula>FirstName__c + &quot; &quot; + LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full_Name__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Status__c</fullName>
        <label>Loyalty Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Purchases__c</fullName>
        <label>Total Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HandsMen Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HandsMen Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HandsMen Customer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Email</fullName>
        <active>true</active>
        <errorConditionFormula>NOT CONTAINS(Email__c, &quot;@gmail.com&quot;)</errorConditionFormula>
        <errorMessage>Please fill Correct Gmail</errorMessage>
    </validationRules>
</CustomObject>